--- a/IST541/Final/lesson.html
+++ b/IST541/Final/lesson.html
@@ -1,29 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>What Is The Best Tool For The Job?</title>
+<meta charset="utf-8">
+<title>Final | Lesson (Collapsibles)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+  <div class="wrap">
+    <h1>Lesson: When to Use AI Avatars</h1>
+    <p class="byline">By Ross Hayduk</p>
+    <nav class="nav" aria-label="Primary">
+      <a href="index.html">Home</a>
+      <a class="active" href="lesson.html">Lesson</a>
+      <a href="audio.html">Audio/Video</a>
+      <a href="quiz.html">Quiz</a>
+      <a href="iframes.html">iFrame</a>
+      <a href="references.html">References</a>
+    </nav>
+  </div>
+</header>
 
-<!-- Top nav, same inline style as other pages: simple text links -->
-[HOME](index.html)  [Using iFrames in Online Learning](iframes.html)  [Embedding Audio & Video](audio.html)
+<main>
+  <h2>Guided Notes</h2>
+  <details>
+    <summary>What are AI avatars?</summary>
+    <p>AI avatars are synthetic presenters that can deliver micro-lectures and demos at scale with consistent quality.</p>
+  </details>
+  <details>
+    <summary>When should I use them?</summary>
+    <p>Use avatars for repeatable explanations, multilingual content, or when on-camera SMEs are unavailable.</p>
+  </details>
+  <details>
+    <summary>Ethics and accessibility</summary>
+    <p>Disclose synthetic media, provide captions/transcripts, and follow accessibility best practices.</p>
+  </details>
+</main>
 
-# What Is The Best Tool For The Job?
+<footer>
+  <div class="wrap">
+    <small>© 2025 Ross M. Hayduk</small>
+  </div>
+</footer>
 
-## Final Project for IST 541 - MM II: Interactive Media
-
-### What Is The Best Tool For Video Avatars?
-Hint: Instead of hover effects, click the link below to view the answer logo.
-- **Answer:** HeyGen  
-  [View HeyGen Logo (PNG)](img/heygen.png)
-
-### What Is The Best Tool For Audio Clones?
-Hint: Instead of hover effects, click the link below to view the answer logo.
-- **Answer:** ElevenLabs  
-  [View ElevenLabs Logo (PNG)](img/elevenlabs.png)
-
-© 2025 Ross M. Hayduk
-
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-2pmE0n0x+H4C2zY2k8Jrj1mXG7VQ5Q0SYJr3qPn4N0w=" crossorigin="anonymous"></script>
+<script>
+// Collapsibles use native <details>; no JS required here.
+</script>
 </body>
 </html>
