--- a/IST541/Final/audio.html
+++ b/IST541/Final/audio.html
@@ -1,85 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Embedding Audio and Video Clones</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://haydukross.github.io/IST541/Final/css/avcss.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Final | Audio & Video Demos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <h1>How to Embed Audio and Video</h1>
-      <h2>An Assignment for the IST 541 Final</h2>
-      <nav class="pill-row" aria-label="Primary navigation">
-		<a class="pill" href="https://haydukross.github.io/IST541/Final/index.html">HOME</a>
-        <a class="pill active" href="https://haydukross.github.io/IST541/Final/audio.html">Embedding Audio</a>
-        <a class="pill" href="https://haydukross.github.io/IST541/Final/video.html">Embedding Video</a>
-      </nav>
-    </div>
-  </header>
-  <main class="main">
-	  
-<center>
-    <div class="container">
-      <section class="section">
-        <h2 class="mt-0">Embedded Audio: ElevenLabs Voices</h2>
-        <p class="lede">This page embeds audio samples.</p>
-		<br>
+<header>
+  <div class="wrap">
+    <h1>Audio & Video Samples</h1>
+    <p class="byline">By Ross Hayduk</p>
+    <nav class="nav" aria-label="Primary">
+      <a href="index.html">Home</a>
+      <a href="lesson.html">Lesson</a>
+      <a class="active" href="audio.html">Audio/Video</a>
+      <a href="quiz.html">Quiz</a>
+      <a href="iframes.html">iFrame</a>
+      <a href="references.html">References</a>
+    </nav>
+  </div>
+</header>
 
-<center
-<table border="1">
-<tr>
-	<td>
-	<center>
-   		<br /> HeyGen Ross <br />
-		<br>
-       <audio controls src="https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_Ross.mp3"> 
-          This browser does not support HTML5 audio
-          </audio></center>
-		<br>
-	</td>
+<main>
+  <h2>Media</h2>
+  <div class="media">
+    <video controls preload="metadata" src="video/heygen_original.mp4" title="HeyGen demo">
+      Sorry, your browser doesn't support embedded videos.
+    </video>
 
-	<td>
-	<center>
-        <br />  HeyGen Male (James) <br />
-		<br>
-       <audio controls src= "https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_James.mp3"> 
-           This browser does not support HTML audio
-        </audio></center>
-		<br>
-    </td>
-	
-    <td>
-		<center>
-        <br /> HeyGen Female (Jane) <br />
-		<br>
-        <audio controls src= "https://haydukross.github.io/IST541/Lab4/audio/ElevenLabs_Jane.mp3"> 
-           This browser does not support HTML5 audio
-         </audio></center>
-		<br>
-    </td> 
-</tr>
-   </table> 
-</center>
+    <section class="card">
+      <h3>HeyGen Ross (Audio)</h3>
+      <audio controls preload="metadata">
+        <source src="audio/heygen_ross.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
 
-</div>
-        <p class="mt-16"></p>
-      </section>
-    </div>
-	
+      <p><button class="btn hint-btn">Show listening tip</button></p>
+      <p class="hint">Focus on clarity, pacing, and pronunciation when evaluating TTS quality.</p>
+    </section>
+  </div>
+</main>
 
-	  
-	  
-	  
-	  
-	  
-  </main>
-  <footer class="footer">
-    <div class="container">© 2025 Ross M. Hayduk</div>
-  </footer>
+<footer>
+  <div class="wrap">
+    <small>© 2025 Ross M. Hayduk</small>
+  </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-2pmE0n0x+H4C2zY2k8Jrj1mXG7VQ5Q0SYJr3qPn4N0w=" crossorigin="anonymous"></script>
+<script>
+$('.hint-btn').on('click', function(){ $(this).next('.hint').slideToggle(150); });
+</script>
 </body>
 </html>
