--- a/IST541/Final/iframes.html
+++ b/IST541/Final/iframes.html
@@ -1,45 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adding External Content using iFrames</title>
-
-  <!-- Font to match the site -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link href="css/Lab3.css" rel="stylesheet" type="text/css" />
+<meta charset="utf-8">
+<title>Final | iFrame Example</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div id="wrapper">
-    <header id="header">
-      <h1>How to Add External Content with <strong>iFrames</strong></h1>
-      <h2>An Assignment for IST 541's Lab 3</h2>
-    </header>
-
-    <nav class="nav">
-      <a class="btn" href="index.html">The <strong>Modality Principle</strong> in Online Learning</a>
-      <a class="btn" href="page2.html">Using <strong>HeyGen</strong> at CSUMB's MIST Program</a>
-      <a class="btn" href="page3.html">Creating A <strong>HeyGen</strong> "Digital Twin"</a>
-      <a class="btn" href="page4.html">Using the <strong>HeyGen</strong> Translation Technology</a>
+<header>
+  <div class="wrap">
+    <h1>Embedded Page (Related Content)</h1>
+    <p class="byline">By Ross Hayduk</p>
+    <nav class="nav" aria-label="Primary">
+      <a href="index.html">Home</a>
+      <a href="lesson.html">Lesson</a>
+      <a href="audio.html">Audio/Video</a>
+      <a href="quiz.html">Quiz</a>
+      <a class="active" href="iframes.html">iFrame</a>
+      <a href="references.html">References</a>
     </nav>
-
-    <main class="card">
-      <h3>The <strong>Modality Principle</strong> in Online Learning</h3>
-
-      <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
-        <iframe
-          src="https://youtu.be/jMZAN5S_Gdk"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-    </main>
   </div>
+</header>
+
+<main>
+  <h2>Educational Technology (Example)</h2>
+  <p>This iFrame embeds a page related to the topic. If your instructor prefers a specific source, replace the URL.</p>
+
+  <div class="iframe-wrap">
+    <iframe title="Educational technology (Wikipedia)"
+            src="https://en.wikipedia.org/wiki/Educational_technology"
+            loading="lazy" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+  </div>
+</main>
+
+<footer>
+  <div class="wrap">
+    <small>© 2025 Ross M. Hayduk</small>
+  </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-2pmE0n0x+H4C2zY2k8Jrj1mXG7VQ5Q0SYJr3qPn4N0w=" crossorigin="anonymous"></script>
+<script>
+// No JS required on this page.
+</script>
 </body>
 </html>
