--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -1,33 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Using AI Avatars & A/V Clones in EdTech</title>
-
-  <!-- Font to match the site -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link href="css/iframecss.css" rel="stylesheet" type="text/css" />
+<meta charset="utf-8">
+<title>Final | AI Avatars & A/V Clones in EdTech</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-  <div id="wrapper">
-    <header id="header">
-      <h1><strong>Using AI Avatars & A/V Clones</strong> in EdTech</h1>
-      <h2>Final Project for IST 541 - MM II: Interactive Media</h2>
-    </header>
+<header>
+  <div class="wrap">
+    <h1>How to Use AI Avatars in Online Lessons</h1>
+    <p class="byline">By Ross Hayduk</p>
 
-    <nav class="pill-row" aria-label="Primary navigation">
-      <a class="pill active" href="index.html">HOME</a>
-      <a class="pill" href="page1.html">Using <strong>iFrames</strong></a>
-      <a class="pill" href="audio.html">Using <strong>Avatars</strong></a>
-      <a class="pill" href="quiz.html">Test Your <strong>Knowledge</strong>!</a>
+    <nav class="nav" aria-label="Primary">
+      <a class="active" href="index.html">Home</a>
+      <a href="lesson.html">Lesson</a>
+      <a href="audio.html">Audio/Video</a>
+      <a href="quiz.html">Quiz</a>
+      <a href="iframes.html">iFrame</a>
+      <a href="references.html">References</a>
     </nav>
-
   </div>
+</header>
+
+<main>
+  <section class="card">
+    <h2>Overview</h2>
+    <p>In this final, I show a simple, clean site that matches the style of my other assignments with clear headings, short steps, and light visuals.</p>
+    <ul>
+      <li>🚩 Keep pages minimal and consistent.</li>
+      <li>✅ Include two jQuery interactions: hint toggles and quiz scoring.</li>
+      <li>✅ Include a collapsible section page using <code>&lt;details&gt;</code>.</li>
+      <li>✅ Include an iFrame with related content.</li>
+    </ul>
+  </section>
+
+  <div class="hr"></div>
+
+  <section class="card">
+    <h2>Preview Image</h2>
+    <figure class="figure">
+      <img src="img/ai-avatar-example.jpg" alt="Example avatar used in a lesson">
+      <figcaption class="caption">Example still image used for context.</figcaption>
+    </figure>
+  </section>
+</main>
+
+<footer>
+  <div class="wrap">
+    <small>© 2025 Ross M. Hayduk</small>
+  </div>
+</footer>
+
+<!-- jQuery + simple interactions -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-2pmE0n0x+H4C2zY2k8Jrj1mXG7VQ5Q0SYJr3qPn4N0w=" crossorigin="anonymous"></script>
+<script>
+// (No JS needed on home; interactions appear on other pages)
+</script>
 </body>
 </html>
