--- a/IST541/Final/page2.html
+++ b/IST541/Final/page2.html
@@ -22,11 +22,13 @@
     </header>
 
 <nav class="nav">
-  <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="index.html" aria-current="page"><strong>Home</strong></a>
   <a class="btn" href="page1.html"><strong>Modality Principle</strong></a>
   <a class="btn" href="page2.html" aria-current="page">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+  <a class="btn" href="av1.html"><strong>Embedding Audio</strong></a>
+  <a class="btn" href="av2.html"><strong>Embedding Video</strong></a>
 </nav>
 
     <main class="card">
