--- a/IST541/Final/page3.html
+++ b/IST541/Final/page3.html
@@ -27,6 +27,8 @@
   <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html" aria-current="page">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+  <a class="btn" href="av1.html"><strong>Embedding Audio</strong></a>
+  <a class="btn" href="av2.html"><strong>Embedding Video</strong></a>
 </nav>
 
     <main class="card">
