--- a/IST541/Final/av1.html
+++ b/IST541/Final/av1.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lab 4 - Embedding Audio and Video</title>
+  <title>Embedding Audio and Video Clone Technology</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://haydukross.github.io/IST541/Lab4/css/Lab4.css" rel="stylesheet" type="text/css">
-</head>
+  <link href="css/home.css" rel="stylesheet" type="text/css"></head>
 <body>
   <header class="header">
     <div class="container">
-      <h1>How to Embed Audio and Video</h1>
+      <h1>Embedding A/V Clone Technology</h1>
       <h2>by Ross Hayduk</h2>
       <nav class="pill-row" aria-label="Primary navigation">
-        <a class="pill active" href="https://haydukross.github.io/IST541/Lab4/index.html">Embedding Audio</a>
-        <a class="pill" href="https://haydukross.github.io/IST541/Lab4/page2.html">Embedding Video</a>
+        <a class="pill" href="index.html">Home</a>
+        <a class="pill active" href="av1.html">Embedding Audio</a>
+        <a class="pill" href="av2.html">Embedding Video</a>
       </nav>
     </div>
   </header>
