--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -32,15 +32,9 @@
 </nav>
 
     <main class="card">
-      <h3>The <strong>Modality Principle</strong> in Online Learning</h3>
-
-      <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
-        <iframe
-          src="https://youtu.be/jMZAN5S_Gdk"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+		<h3>Welcome to my site, "AI Avatars & Audio/Video Clones in EdTech"!</H3>
+<br>
+		<h3>Please take a look around and let me know what you think!</h3></iframe>
       </div>
     </main>
   </div>
