--- a/IST541/Final/index.html
+++ b/IST541/Final/index.html
@@ -34,7 +34,19 @@
     <main class="card">
 		<h3>Welcome to my site, "AI Avatars & Audio/Video Clones in EdTech"!</H3>
 <br>
-		<h3>Please take a look around and let me know what you think!</h3></iframe>
+		<h3>Please take a look around and let me know what you think.</h3>
+<br>
+<br>
+		<h4> We will discuss two technologies...  HeyGen and ElevenLabs.
+		
+		HeyGen is a generative artificial intelligence company that creates photo-realistic avatars via user-submitted photos and videos as well as a library of pre-made avatars and voices. The digital avatar can recite prompts in multiple languages.
+<br>
+<br>
+		ElevenLabs Inc. is a software company that specializes in developing natural-sounding speech synthesis software using deep learning.</h4>
+		
+<br>
+<br>
+		
       </div>
     </main>
   </div>
