--- a/IST541/Final/av2.html
+++ b/IST541/Final/av2.html
@@ -15,6 +15,7 @@
       <h2>by Ross Hayduk</h2>
       <nav class="pill-row" aria-label="Primary navigation">
         <a class="pill" href="index.html">Home</a>
+		<a class="pill" href="jobaid.html">Avatar Tutorial</a>
         <a class="pill" href="av1.html">Embedding Audio</a>
         <a class="pill active" href="av2.html">Embedding Video</a>
       </nav>
