--- a/IST541/Final/page2.html
+++ b/IST541/Final/page2.html
@@ -27,6 +27,7 @@
   <a class="btn" href="page2.html" aria-current="page">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+  <a class="btn" href="jobaid.html"><strong>A/V Tutorial</strong></a>
   <a class="btn" href="av1.html"><strong>Embedding Audio</strong></a>
   <a class="btn" href="av2.html"><strong>Embedding Video</strong></a>
 </nav>
