--- a/IST541/Final/howto.html
+++ b/IST541/Final/howto.html
@@ -1,149 +1,40 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Utilizing AI Avatars & Audio/Video Clones In EdTech</title>
-
-  <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>A/V Tutorial — How-To</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
-  <link href="css/jobaid.css" rel="stylesheet">
+  <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-  <div id="wrapper">
-    <div id="header">
-		<h1>Utilizing <strong>AI Avatars & Audio/Video Clones</strong> In EdTech</h1>
-      <h2>By Ross Hayduk</h2>
-    </div>
+<div id="wrapper">
+<center><header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
+<br><h2>By Ross Hayduk</h2><br>
+<br></header>
 
-    <details class="step" open>
-      <summary class="stepTitle">Step 1: Open <strong>HeyGen</strong></summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          Go to
-          <a href="https://www.heygen.com" target="_blank" rel="noopener noreferrer"
-             style="color:#fff; text-decoration: underline;">HeyGen.com</a>
-          and log in with your account. If you <strong>don't</strong> have one, sign up for <strong>FREE</strong> to get started.
+  <nav class="nav only-pills">
+    <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="page1.html">Modality Principle</a>
+  <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
+  <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
+  <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+  <a class="btn" href="jobaid.html" aria-current="page">A/V Tutorial</a>
+  <a class="btn" href="av1.html">Embedding Audio</a>
+  <a class="btn" href="av2.html">Embedding Video</a>
+  </nav>
+</center>
+  <main class="card">
+    <h3 class="mt-0">How-To Overview</h3>
+    <p class="lede">See the A/V Tutorial for step-by-step instructions.</p>
+    <p><a class="btn" href="jobaid.html">Go to the A/V Tutorial</a></p>
+  </main>
 
-          <p class="warning" role="note">
-            <span class="material-icons" aria-hidden="true">flag</span>
-            <span><strong>Note:</strong> Free accounts have limited capabilities.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/step1.png" alt="Opening HeyGen homepage." />
-        </div>
-      </div>
-    </details>
-
-    <details class="step">
-      <summary class="stepTitle">Step 2: Navigate to Avatar Creation</summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          Once logged in, click the <strong>Avatars</strong> tab in the main menu. This opens the avatar creation dashboard.
-
-          <p class="warning" role="note">
-            <span class="material-icons" aria-hidden="true">flag</span>
-            <span>Explore the different avatar categories, from UGC to studio-style characters.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/step2.png" alt="Avatar creation menu." />
-        </div>
-      </div>
-    </details>
-
-    <details class="step">
-      <summary class="stepTitle">Step 3: Choose Your Avatar Type</summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          You can select a stock avatar or create a custom avatar. Start with <strong>Public Avatars</strong>.
-
-          <p class="warning" role="note">
-            <span class="material-icons" aria-hidden="true">flag</span>
-            <span>Custom avatars may require an additional subscription.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/step3.png" alt="Selecting avatar type." />
-        </div>
-      </div>
-    </details>
-
-    <details class="step">
-      <summary class="stepTitle">Step 4: Customize Your Avatar</summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          Adjust voice, language, and gestures. <strong>HeyGen</strong> supports lip-sync for scripts. Preview before saving.
-
-          <p class="warning" role="note">
-            <span class="material-icons" aria-hidden="true">flag</span>
-            <span>Match the voice to the character to avoid the “uncanny valley” effect.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/step4.png" alt="Customizing avatar settings." />
-        </div>
-      </div>
-    </details>
-
-    <details class="step">
-      <summary class="stepTitle">Step 5: Generate</summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          Click <strong>Generate</strong> to produce your avatar. Use it in <strong>HeyGen</strong> projects or export it.
-
-          <p class="success" role="note">
-            <span class="material-icons" aria-hidden="true">check_circle</span>
-            <span><strong>Saved:</strong> Your avatar is ready for use.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/step5.png" alt="Generating the final avatar." />
-        </div>
-      </div>
-    </details>
-
-    <details class="step">
-      <summary class="stepTitle">Now, Review the Five Steps</summary>
-      <div class="stepContent">
-        <div class="stepDescription">
-          <ol>
-            <li>Open <strong>HeyGen</strong>.</li>
-            <li>Go to <strong>Avatars</strong>.</li>
-            <li>Choose an avatar.</li>
-            <li>Customize voice and gestures.</li>
-            <li>Click <strong>Generate</strong>.</li>
-          </ol>
-
-          <p class="success" role="note">
-            <span class="material-icons" aria-hidden="true">check_circle</span>
-            <span><strong>Great work!</strong> You’re on your way to mastering <strong>HeyGen</strong>.</span>
-          </p>
-        </div>
-        <div class="stepImage">
-          <img src="img/HeyGen_Logo_Prism_Black.svg" alt="HeyGen Logo" />
-        </div>
-      </div>
-    </details>
-  </div><!-- /wrapper -->
-
-  <!-- Accordion behavior: opening one <details> closes the others -->
-  <script>
-    document.querySelectorAll("details.step").forEach(detail => {
-      detail.addEventListener("toggle", () => {
-        if (!detail.open) return;
-        document.querySelectorAll("details.step[open]").forEach(other => {
-          if (other !== detail) other.open = false;
-        });
-      });
-    });
-  </script>
+  <footer class="footer">
+    <div class="container">© 2025 Ross M. Hayduk</div>
+  </footer>
+</div>
 </body>
 </html>
