--- a/IST541/Final4/IST541_Final_Site/jobaid.html
+++ b/IST541/Final4/IST541_Final_Site/jobaid.html
@@ -12,12 +12,20 @@
 </head>
 <body>
 <div id="wrapper">
-<center>
+
   <header class="site-header">
-    <h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br>
-    <h2>By Ross Hayduk</h2><br>
-<br>
+    <h1>AI Avatars & Audio/Video Clones in EdTech</h1>
+    <h2>By Ross Hayduk</h2>
+    <nav class="nav-bar">
+        <a href="index.html">Home</a>
+        <a href="page1.html">Modality Principle</a>
+        <a href="page2.html">Using HeyGen</a>
+        <a href="page3.html">Creating Digital Twins</a>
+        <a href="page4.html">Using Translation Tech</a>
+        <a href="jobaid.html" aria-current="page">A/V Tutorial</a>
+        <a href="av1.html">Embedding Audio</a>
+        <a href="av2.html">Embedding Video</a>
+    </nav>
   </header>
 
   <nav class="nav">
@@ -30,7 +38,7 @@
       <a class="btn" href="av1.html">Embedding Audio</a>
       <a class="btn" href="av2.html">Embedding Video</a>
   </nav>
-</center>
+
   <main class="card">
     <h3 class="mt-0">How to Create an Avatar in HeyGen</h3>
 
