--- a/IST541/IST541_Final_Site_NoTextNav/av1.html
+++ b/IST541/IST541_Final_Site_NoTextNav/av1.html
@@ -11,10 +11,7 @@
 </head>
 <body>
 <div id="wrapper">
-<center>
-<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br><h2>By Ross Hayduk</h2><br>
-<br></header>
+<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><h2>By Ross Hayduk</h2></header>
 
   <nav class="nav only-pills">
     <a class="btn" href="index.html"><strong>Home</strong></a>
@@ -26,7 +23,7 @@
   <a class="btn" href="av1.html" aria-current="page">Embedding Audio</a>
   <a class="btn" href="av2.html">Embedding Video</a>
   </nav>
-</center>
+
   <main class="card">
     <h3 class="mt-0">Embedded Audio: ElevenLabs Voices</h3>
     <p class="lede">Three short samples rendered with ElevenLabs.</p>
