--- a/IST541/Final/page2.html
+++ b/IST541/Final/page2.html
@@ -3,48 +3,34 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AI Avatars & Audio/Video Clones in EdTech</title>
-
-  <!-- Font to match the site -->
+  <title>Using HeyGen</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-
-  <!-- Styles -->
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-  <div id="wrapper">
-    <header id="header">
-      <h1>How to Add External Content with <strong>iFrames</strong></h1>
-      <h2>An Assignment for IST 541's Lab 3</h2>
-    </header>
+<div id="wrapper">
+<center><header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
+<br><h2>By Ross Hayduk</h2><br>
+<br></header>
 
-<nav class="nav">
-  <a class="btn" href="index.html" aria-current="page"><strong>Home</strong></a>
-  <a class="btn" href="page1.html"><strong>Modality Principle</strong></a>
+  <nav class="nav only-pills">
+    <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="page1.html">Modality Principle</a>
   <a class="btn" href="page2.html" aria-current="page">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
-  <a class="btn" href="jobaid.html"><strong>A/V Tutorial</strong></a>
-  <a class="btn" href="av1.html"><strong>Embedding Audio</strong></a>
-  <a class="btn" href="av2.html"><strong>Embedding Video</strong></a>
-</nav>
-
-    <main class="card">
+  <a class="btn" href="jobaid.html">A/V Tutorial</a>
+  <a class="btn" href="av1.html">Embedding Audio</a>
+  <a class="btn" href="av2.html">Embedding Video</a>
+  </nav>
+</center>
+  <main class="card">
       <h3>Using <strong>HeyGen</strong> at CSUMB's MIST Program</h3>
 
-  <div class="quiz" style="margin-top:1rem">
-  <p><strong>Quick check:</strong> Which tool generates “digital twin” videos?</p>
-  <button id="revealBtn">Reveal Answer</button>
-  <span id="answer" hidden>HeyGen.</span>
-</div>    <!-- Responsive iframe wrapper -->
-    <br>
-<br>
-<br>
-<br>
-  <div class="iframeWrap">
+      <!-- Responsive iframe wrapper -->
+      <div class="iframeWrap">
         <iframe
           src="https://youtu.be/CXJm-zxOmY8"
           title="YouTube video player"
@@ -52,12 +38,10 @@
           allowfullscreen></iframe>
       </div>
     </main>
-  </div>
+
+  <footer class="footer">
+    <div class="container">© 2025 Ross M. Hayduk</div>
+  </footer>
+</div>
 </body>
-</html><script>
-  document.getElementById('revealBtn').addEventListener('click', function(){
-    const a = document.getElementById('answer');
-    a.hidden = !a.hidden;
-    this.textContent = a.hidden ? 'Reveal Answer' : 'Hide Answer';
-  });
-</script>
+</html>
