--- a/IST541/Final3/av2.html
+++ b/IST541/Final3/av2.html
@@ -1,32 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Embedding Video</title>
+  <meta charset="utf-8">
+  <title>Embedding Audio and Video Clones Technology</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-  <link href="css/home.css" rel="stylesheet" type="text/css" />
-</head>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="css/home.css" rel="stylesheet" type="text/css"></head>
 <body>
-<div id="wrapper">
-<center>
-<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br><h2>By Ross Hayduk</h2><br>
-<br></header>
+  <header class="site-header">
+  <h1>AI Avatars & Audio/Video Clones in EdTech</h1>
+  <h2>By Ross Hayduk</h2>
 
-  <nav class="nav only-pills">
-    <a class="btn" href="index.html"><strong>Home</strong></a>
-  <a class="btn" href="page1.html">Modality Principle</a>
-  <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
-  <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
-  <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
-  <a class="btn" href="jobaid.html">A/V Tutorial</a>
-  <a class="btn" href="av1.html">Embedding Audio</a>
-  <a class="btn" href="av2.html" aria-current="page">Embedding Video</a>
+  <nav class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="page1.html">Modality Principle</a>
+    <a href="page2.html">Using HeyGen</a>
+    <a href="page3.html">Creating Digital Twins</a>
+    <a href="page4.html">Using Translation Tech</a>
+    <a href="jobaid.html">A/V Tutorial</a>
+    <a href="av1.html">Embedding Audio</a>
+    <a href="av2.html">Embedding Video</a>
   </nav>
-</center>
+</header>
   <main class="main">
     <div class="container">
       <section class="section">
@@ -57,10 +54,13 @@
     <a href="video/HeyGen_Avatar.mp4">Download the MP4</a>.
   </video>
 </div>
-
+        </div>
+        <p class="mt-16"></p>
+      </section>
+    </div>
+  </main>
   <footer class="footer">
     <div class="container">© 2025 Ross M. Hayduk</div>
   </footer>
-</div>
 </body>
 </html>
