--- a/IST541/Final3/page4.html
+++ b/IST541/Final3/page4.html
@@ -3,30 +3,47 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Using Translation Tech</title>
+  <title>AI Avatars & Audio/Video Clones in EdTech</title>
+
+  <!-- Font to match the site -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
-<div id="wrapper">
-<center><header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br><h2>By Ross Hayduk</h2><br>
-<br></header>
 
-  <nav class="nav only-pills">
-    <a class="btn" href="index.html"><strong>Home</strong></a>
-  <a class="btn" href="page1.html">Modality Principle</a>
+<body>
+  <div id="wrapper">
+    <header class="site-header">
+  <h1>AI Avatars & Audio/Video Clones in EdTech</h1>
+  <h2>By Ross Hayduk</h2>
+
+  <nav class="nav-bar">
+    <a href="index.html">Home</a>
+    <a href="page1.html">Modality Principle</a>
+    <a href="page2.html">Using HeyGen</a>
+    <a href="page3.html">Creating Digital Twins</a>
+    <a href="page4.html">Using Translation Tech</a>
+    <a href="jobaid.html">A/V Tutorial</a>
+    <a href="av1.html">Embedding Audio</a>
+    <a href="av2.html">Embedding Video</a>
+  </nav>
+</header>
+
+<nav class="nav">
+  <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="page1.html"><strong>Modality Principle</strong></a>
   <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html" aria-current="page">Using <strong>Translation Tech</strong></a>
-  <a class="btn" href="jobaid.html">A/V Tutorial</a>
-  <a class="btn" href="av1.html">Embedding Audio</a>
-  <a class="btn" href="av2.html">Embedding Video</a>
-  </nav>
-</center>
-   <main class="card">
+  <a class="btn" href="jobaid.html"><strong>A/V Tutorial</strong></a>
+  <a class="btn" href="av1.html"><strong>Embedding Audio</strong></a>
+  <a class="btn" href="av2.html"><strong>Embedding Video</strong></a>
+</nav>
+
+    <main class="card">
       <h3>Using the <strong>HeyGen</strong> Translation Technology</h3>
 
       <!-- Responsive iframe wrapper -->
@@ -38,10 +55,6 @@
           allowfullscreen></iframe>
       </div>
     </main>
-
-  <footer class="footer">
-    <div class="container">© 2025 Ross M. Hayduk</div>
-  </footer>
-</div>
+  </div>
 </body>
 </html>
