--- a/IST541/Final4/IST541_Final_Site/av1.html
+++ b/IST541/Final4/IST541_Final_Site/av1.html
@@ -11,22 +11,33 @@
 </head>
 <body>
 <div id="wrapper">
-<center>
-<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br><h2>By Ross Hayduk</h2><br>
-<br></header>
 
-  <nav class="nav only-pills">
-    <a class="btn" href="index.html"><strong>Home</strong></a>
-  <a class="btn" href="page1.html">Modality Principle</a>
-  <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
-  <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
-  <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
-  <a class="btn" href="jobaid.html">A/V Tutorial</a>
-  <a class="btn" href="av1.html" aria-current="page">Embedding Audio</a>
-  <a class="btn" href="av2.html">Embedding Video</a>
+  <header class="site-header">
+    <h1>AI Avatars & Audio/Video Clones in EdTech</h1>
+    <h2>By Ross Hayduk</h2>
+    <nav class="nav-bar">
+        <a href="index.html">Home</a>
+        <a href="page1.html">Modality Principle</a>
+        <a href="page2.html">Using HeyGen</a>
+        <a href="page3.html">Creating Digital Twins</a>
+        <a href="page4.html">Using Translation Tech</a>
+        <a href="jobaid.html">A/V Tutorial</a>
+        <a href="av1.html" aria-current="page">Embedding Audio</a>
+        <a href="av2.html">Embedding Video</a>
+    </nav>
+  </header>
+
+  <nav class="nav">
+      <a class="btn" href="index.html"><strong>Home</strong></a>
+      <a class="btn" href="page1.html">Modality Principle</a>
+      <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
+      <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
+      <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+      <a class="btn" href="jobaid.html">A/V Tutorial</a>
+      <a class="btn" href="av1.html" aria-current="page">Embedding Audio</a>
+      <a class="btn" href="av2.html">Embedding Video</a>
   </nav>
-</center>
+
   <main class="card">
     <h3 class="mt-0">Embedded Audio: ElevenLabs Voices</h3>
     <p class="lede">Three short samples rendered with ElevenLabs.</p>
