--- a/IST541/IST541_Final_Site_NoTextNav/jobaid.html
+++ b/IST541/IST541_Final_Site_NoTextNav/jobaid.html
@@ -8,29 +8,22 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
   <link href="css/home.css" rel="stylesheet" type="text/css" />
-    <link href="css/jobaid.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="wrapper">
-<center>
-  <header class="site-header">
-    <h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br>
-    <h2>By Ross Hayduk</h2><br>
-<br>
-  </header>
+<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><h2>By Ross Hayduk</h2></header>
 
-  <nav class="nav">
-      <a class="btn" href="index.html"><strong>Home</strong></a>
-      <a class="btn" href="page1.html">Modality Principle</a>
-      <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
-      <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
-      <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
-      <a class="btn" href="jobaid.html" aria-current="page">A/V Tutorial</a>
-      <a class="btn" href="av1.html">Embedding Audio</a>
-      <a class="btn" href="av2.html">Embedding Video</a>
+  <nav class="nav only-pills">
+    <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="page1.html">Modality Principle</a>
+  <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
+  <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
+  <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
+  <a class="btn" href="jobaid.html" aria-current="page">A/V Tutorial</a>
+  <a class="btn" href="av1.html">Embedding Audio</a>
+  <a class="btn" href="av2.html">Embedding Video</a>
   </nav>
-</center>
+
   <main class="card">
     <h3 class="mt-0">How to Create an Avatar in HeyGen</h3>
 
