--- a/IST541/IST541_Final_Site_NoTextNav/page1.html
+++ b/IST541/IST541_Final_Site_NoTextNav/page1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home</title>
+  <title>Modality Principle</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -11,13 +11,11 @@
 </head>
 <body>
 <div id="wrapper">
-<center><header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><br>
-<br><h2>By Ross Hayduk</h2><br>
-<br></header>
+<header class="site-header"><h1>AI Avatars & Audio/Video Clones in EdTech</h1><h2>By Ross Hayduk</h2></header>
 
   <nav class="nav only-pills">
-    <a class="btn" href="index.html" aria-current="page"><strong>Home</strong></a>
-  <a class="btn" href="page1.html">Modality Principle</a>
+    <a class="btn" href="index.html"><strong>Home</strong></a>
+  <a class="btn" href="page1.html" aria-current="page">Modality Principle</a>
   <a class="btn" href="page2.html">Using <strong>HeyGen</strong></a>
   <a class="btn" href="page3.html">Creating <strong>"Digital Twins"</strong></a>
   <a class="btn" href="page4.html">Using <strong>Translation Tech</strong></a>
@@ -25,23 +23,22 @@
   <a class="btn" href="av1.html">Embedding Audio</a>
   <a class="btn" href="av2.html">Embedding Video</a>
   </nav>
-</center>
-  <main class="card">
-    <h3 class="mt-0">Welcome</h3>
-    <p class="lede">Explore AI avatars, audio/video clones, and practical classroom uses.</p>
-	  
-<h4>We will discuss two technologies... HeyGen and ElevenLabs. 
 
-<br>
-	
-<br>HeyGen is a generative artificial intelligence company that creates photo-realistic avatars via user-submitted photos and videos as well as a library of pre-made avatars and voices. The digital avatar can recite prompts in multiple languages.
-<br>
-<br>
-ElevenLabs Inc. is a software company that specializes in developing natural-sounding speech synthesis software using deep learning.</h4>  
-	  
-	  
-	  
+  <main class="card">
+    <h3 class="mt-0">Modality Principle</h3>
+    <p class="lede">Pair graphics with narration rather than dense on-screen text.</p>
+    <button class="btn" id="toggleTip">Show Tip</button>
+    <div id="tip" style="display:none;margin-top:12px">Keep text concise, narrate steps, and point to key areas in the visual.</div>
   </main>
+  <script>
+    const btn = document.getElementById('toggleTip');
+    const tip = document.getElementById('tip');
+    btn.addEventListener('click', ()=>{
+      const open = tip.style.display !== 'none';
+      tip.style.display = open ? 'none' : 'block';
+      btn.textContent = open ? 'Show Tip' : 'Hide Tip';
+    });
+  </script>
 
   <footer class="footer">
     <div class="container">© 2025 Ross M. Hayduk</div>
