--- a/IST541/Final/page1.html
+++ b/IST541/Final/page1.html
@@ -30,12 +30,8 @@
       <h3>The <strong>Modality Principle</strong> in Online Learning</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
-        <iframe
-          src="https://youtu.be/jMZAN5S_Gdk"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+<div class="video-16x9">          
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jMZAN5S_Gdk?si=n37TeWf_X6GOw5TZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </main>
   <script>
