--- a/IST541/Final/page4.html
+++ b/IST541/Final/page4.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -30,12 +31,8 @@
       <h3>Using the <strong>HeyGen</strong> Translation Technology</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
-        <iframe
-          src="https://youtu.be/u3V55yZoW6U"
-          title="YouTube Video Player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+<div class="video-16x9">        
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/u3V55yZoW6U?si=yRsrZfp4TWidZwgW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </main>
 
