--- a/IST541/Final/page3.html
+++ b/IST541/Final/page3.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -30,12 +31,8 @@
       <h3>Creating A <strong>HeyGen</strong> "Digital Twin"</h3>
 
       <!-- Responsive iframe wrapper -->
-      <div class="iframeWrap">
-        <iframe
-          src="https://youtu.be/m0fdgkJGxHs"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+<div class="video-16x9">        
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/m0fdgkJGxHs?si=PPNmkmFnDZjI8Apx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </main>
 
